--- a/Contact.html
+++ b/Contact.html
@@ -1,64 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="Style.css">
-    <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <link rel="stylesheet" href="Style.css">
+  <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
 </head>
+
 <body>
   <header class="container-fluid ">
     <div>
       <img src="Assets/amazing_brand.png" alt="logo" id="logo">
     </div>
     <div class="navbar_responsive">
-      <div class="collapse" id="navbarToggleExternalContent" >
+      <div class="collapse" id="navbarToggleExternalContent">
         <div class="p-4">
           <div class="nabvaricono">
-          <a class="nav-link active border border-black rounded" aria-current="page" href="#">Home</a>
-          <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
-          <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
-          <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
-          <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
-          <a class="nav-link border border-black rounded" href="Details.html">Details</a>                
-        </div>   
+            <a class="nav-link active border border-black rounded" aria-current="page" href="#">Home</a>
+            <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
+            <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
+            <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
+            <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
+          </div>
         </div>
       </div>
       <nav class="navbar">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
-      </nav> 
-    </div>     
+      </nav>
+    </div>
     <div class="navlink">
       <nav class="navbar navbar-expand-lg justify-content-end ">
-        <div class="container-fluid">           
+        <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active border border-black rounded"  href="Index.html">Home</a>
+              <a class="nav-link active border border-black rounded" href="Index.html">Home</a>
               <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
               <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
               <a class="nav-link border border-black rounded" aria-current="page" href="#">Contact</a>
               <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
-              <a class="nav-link border border-black rounded" href="Details.html">Details</a>                
             </div>
           </div>
         </div>
       </nav>
-    </div>        
+    </div>
   </header>
   <div>
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+          aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+          aria-label="Slide 5"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -88,60 +96,62 @@
         <div class="carousel-item">
           <img src="Assets/optional_banner_5.jpg" class="d-block w-100" alt="banner5">
           <div class="carousel-caption d-none d-md-block">
-            <h5></h5>             
+            <h5></h5>
           </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    </div>    
+    </div>
   </div>
   <div>
     <div class="container-fluid navhorizontal">
       <div class="row">
-         <div class="d-flex col-sm-8 justify-content-start">
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-              <label class="form-check-label" for="inlineCheckbox1">Category</label>
-            </div>
-            <div class="form-check form-check-inline">
-             <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-             <label class="form-check-label" for="inlineCheckbox2">Category</label>
-            </div>
-           <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-              <label class="form-check-label" for="inlineCheckbox3">Category</label>
-           </div>
+        <div class="d-flex col-sm-8 justify-content-start">
           <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-              <label class="form-check-label" for="inlineCheckbox4">Category</label>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+            <label class="form-check-label" for="inlineCheckbox1">Category</label>
           </div>
-         <div class="form-check form-check-inline">
-           <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-           <label class="form-check-label" for="inlineCheckbox5">Category</label>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+            <label class="form-check-label" for="inlineCheckbox2">Category</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Category</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+            <label class="form-check-label" for="inlineCheckbox4">Category</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
+            <label class="form-check-label" for="inlineCheckbox5">Category</label>
+          </div>
         </div>
-         </div>
         <div class="d-flex col-sm-4 justify-content-end">
-         <nav class="navbar d-flex justify-content-end col-sm-12">
-             <div class="container-fluid">
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-secondary" type="submit">Search</button>
-                </form>
-             </div>
+          <nav class="navbar d-flex justify-content-end col-sm-12">
+            <div class="container-fluid">
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-secondary" type="submit">Search</button>
+              </form>
+            </div>
           </nav>
+        </div>
       </div>
-    </div>        
-   </div> 
-    <div>      
+    </div>
+    <div>
       <form action="contact" id="contactform">
-        <fieldset class="d-grid gap-1 col-1.5 mx-auto p-1">          
+        <fieldset class="d-grid gap-1 col-1.5 mx-auto p-1">
           <label for="name" class="form-label">Name</label>
           <input type="text" name="name" id="name">
         </fieldset>
@@ -151,19 +161,25 @@
         </fieldset>
         <fieldset class="d-grid gap-2 col-1.5 mx-auto p-1">
           <label for="message" class="form-label">Message</label>
-          <textarea name="message" id="message" cols="30" rows="10"  placeholder="Leave a comment here">Message</textarea>          
+          <textarea name="message" id="message" cols="30" rows="10"
+            placeholder="Leave a comment here">Message</textarea>
         </fieldset>
         <div class="d-grid gap-2 col-1.5 mx-auto p-2">
-          <button class="btn btn-outline-danger" type="button">Submit</button>          
+          <button class="btn btn-outline-danger" type="button">Submit</button>
         </div>
       </form>
     </div>
     <footer class="d-flex justify-content-start p-3">
       <a href="https://www.facebook.com" title="Facebook"><img src="Assets/facebook.png" alt="Facebook" class="fb"></a>
-      <a href="https://www.instagram.com" title="Instagram"><img src="Assets/instagram.png" alt="Instagram" class="ig"></a>
-      <a href="https://www.whatsapp.com/" title="Whatsapp"><img src="Assets/whatsapp.png" alt="Whatsapp" class="wsp"></a>                
-     </footer>  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    
+      <a href="https://www.instagram.com" title="Instagram"><img src="Assets/instagram.png" alt="Instagram"
+          class="ig"></a>
+      <a href="https://www.whatsapp.com/" title="Whatsapp"><img src="Assets/whatsapp.png" alt="Whatsapp"
+          class="wsp"></a>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"></script>
+
 </body>
+
 </html>
