--- a/Pastevents.html
+++ b/Pastevents.html
@@ -17,26 +17,27 @@
       <img src="Assets/amazing_brand.png" alt="logo" id="logo" />
     </div>
     <div class="navbar_responsive">
-      <div class="collapse" id="navbarToggleExternalContent" >
+      <div class="collapse" id="navbarToggleExternalContent">
         <div class="p-4">
           <div class="nabvaricono">
-          <a class="nav-link active border border-black rounded" href="Index.html">Home</a>
-          <a class="nav-link border border-black rounded" aria-current="page" href="#">Past Events</a>
-          <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
-          <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
-          <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
-          <a class="nav-link border border-black rounded" href="Details.html">Details</a>                
-        </div>   
+            <a class="nav-link active border border-black rounded" href="Index.html">Home</a>
+            <a class="nav-link border border-black rounded" aria-current="page" href="#">Past Events</a>
+            <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
+            <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
+            <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
+          </div>
         </div>
       </div>
       <nav class="navbar">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
-      </nav> 
-    </div>   
+      </nav>
+    </div>
     <div class="navlink ">
       <nav class="navbar navbar-expand-lg justify-content-end">
         <div class="container-fluid">
@@ -47,7 +48,6 @@
               <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
               <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
               <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
-              <a class="nav-link border border-black rounded" href="Details.html">Details</a>
             </div>
           </div>
         </div>
@@ -111,14 +111,14 @@
         </div>
       </div>
       <div id="divsearch">
-          <nav class="navbar d-flex justify-content-end col-sm-12">
-              <div class="container-fluid">
-                 <form class="d-flex" role="search">
-                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                   <button class="btn btn-outline-secondary" type="submit">Search</button>
-                 </form>
-              </div>
-           </nav>
+        <nav class="navbar d-flex justify-content-end col-sm-12">
+          <div class="container-fluid">
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-secondary" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
       </div>
     </div>
     <div id="cardscontainer" class="d-flex flex-wrap"></div>
